knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Aging_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Aging_Days_Left__c</fullName>
    <label>Aging Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>