knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Anticipated_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Termination_Date__c</fullName>
    <label>Anticipated Termination Date</label>
    <type>Date</type>
</CustomField>