knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Billing_Only_Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Only_Service_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Only (Service Account)</label>
    <type>Checkbox</type>
</CustomField>