knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Candidate_Comments__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Comments__c</fullName>
    <label>Candidate Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>