knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Certificate_of_Insurance_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Insurance_Expiration__c</fullName>
    <label>Certificate of Insurance Expiration</label>
    <type>Date</type>
</CustomField>