knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Certificate_of_Insurance_Start__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Insurance_Start__c</fullName>
    <label>Certificate of Insurance Start</label>
    <type>Date</type>
</CustomField>