knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Credentialling_Status__c.field-meta.xml
<CustomField>
    <fullName>Credentialling_Status__c</fullName>
    <label>Credentialing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Billing Only</fullName>
            </value>
            <value>
                <fullName>Credentialed Only</fullName>
            </value>
            <value>
                <fullName>In Deferral</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scheduled Pending</fullName>
            </value>
            <value>
                <fullName>Superv/Collab Phys Only</fullName>
            </value>
            <value>
                <fullName>Temporarily Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>