knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Critical_Care_Billing_Eligible_Effective__c.field-meta.xml
<CustomField>
    <fullName>Critical_Care_Billing_Eligible_Effective__c</fullName>
    <label>Critical Care Billing Eligible Effective</label>
    <type>Date</type>
</CustomField>