knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Defect_Analysis_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Defect_Analysis_Start_Date__c</fullName>
    <label>Defect Analysis Start Date</label>
    <type>Date</type>
</CustomField>