knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Exclude_On_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Exclude_On_Agreement__c</fullName>
    <formula>Billing_Only_Service_Account__c</formula>
    <label>Exclude On Agreement</label>
    <type>Checkbox</type>
</CustomField>