knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Facility_Title__c.field-meta.xml
<CustomField>
    <fullName>Facility_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Title</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Healthcare Practitioner Facilities</relationshipLabel>
    <relationshipName>Healthcare_Practitioner_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>