knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/First_Clinical_Shift__c.field-meta.xml
<CustomField>
    <fullName>First_Clinical_Shift__c</fullName>
    <inlineHelpText>Actual first date a clinician worked</inlineHelpText>
    <label>First Clinical Shift</label>
    <type>Date</type>
</CustomField>