knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/First_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Scheduled_Date__c</fullName>
    <inlineHelpText>Previously called First Scheduled Date (FSD)</inlineHelpText>
    <label>Anticipated First Shift</label>
    <type>Date</type>
</CustomField>