knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/General_NP_PA_Onboarding_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_NP_PA_Onboarding_Comments__c</fullName>
    <label>General NP/PA Onboarding Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>