knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Hospital_Application_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Application_Received_Date__c</fullName>
    <inlineHelpText>Date hospital application was received from clinician</inlineHelpText>
    <label>Hospital Application Received Date</label>
    <type>Date</type>
</CustomField>