knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Hospital_Application_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Application_Sent_On__c</fullName>
    <inlineHelpText>Date hospital application was sent to the clinician</inlineHelpText>
    <label>Hospital Application Sent On</label>
    <type>Date</type>
</CustomField>