knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Hospital_Privilege_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Privilege_Expiration_Date__c</fullName>
    <label>Hospital Privilege Expiration Date</label>
    <type>Date</type>
</CustomField>