knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Hospital_Privileged_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Privileged_Date__c</fullName>
    <label>Hospital Privileged Date</label>
    <type>Date</type>
</CustomField>