knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/HPF_Number__c.field-meta.xml
<CustomField>
    <fullName>HPF_Number__c</fullName>
    <displayFormat>HPF-{00000000}</displayFormat>
    <label>HPF Number</label>
    <type>AutoNumber</type>
</CustomField>