knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Inactivity_Qualified_270__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Qualified_270__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactivity Qualified (270 Days)</label>
    <type>Checkbox</type>
</CustomField>