knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/isSisterSiteLocation__c.field-meta.xml
<CustomField>
    <fullName>isSisterSiteLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether sister sister available or not</description>
    <label>Is Sister Site Location</label>
    <type>Checkbox</type>
</CustomField>