knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Job_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Applicant</label>
    <referenceTo>bpats__ATS_Applicant__c</referenceTo>
    <relationshipLabel>Healthcare Practitioner Facilities</relationshipLabel>
    <relationshipName>Healthcare_Practitioner_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>