knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Last_Date_Worked__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Worked__c</fullName>
    <label>Last Date Worked</label>
    <type>Date</type>
</CustomField>