knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Latest_Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contract_Signed_Date__c</fullName>
    <label>Latest Contract Signed Date</label>
    <type>Date</type>
</CustomField>