knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Legacy_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created_Date__c</fullName>
    <label>Legacy Created Date</label>
    <type>Date</type>
</CustomField>