knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Legacy_PFA_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_PFA_ID__c</fullName>
    <description>Using for DataMigration purpose</description>
    <label>Legacy PFA ID</label>
    <type>TextArea</type>
</CustomField>