knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Legacy_PFA_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_PFA_Name__c</fullName>
    <label>Legacy PFA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>