knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Monthly_Shifts_Requested__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Shifts_Requested__c</fullName>
    <label>Monthly Shifts Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>