knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/No_of_Hours_Anticipated_to_Work__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hours_Anticipated_to_Work__c</fullName>
    <label># of Hours Anticipated to Work Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>