knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Nocturnist__c.field-meta.xml
<CustomField>
    <fullName>Nocturnist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nocturnist</label>
    <type>Checkbox</type>
</CustomField>