knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Non_Compete__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Compete</label>
    <type>Checkbox</type>
</CustomField>