knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Ok_to_Send_Rates__c.field-meta.xml
<CustomField>
    <fullName>Ok_to_Send_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is set first time Credentialing Status changes to ‘Active’ or ‘Scheduled Pending’</description>
    <label>Ok to Send Rates</label>
    <type>Checkbox</type>
</CustomField>