knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/PCF_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>PCF_Issue_Date__c</fullName>
    <inlineHelpText>Patient Compensation Fund</inlineHelpText>
    <label>PCF Issue Date</label>
    <type>Date</type>
</CustomField>