knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/PEP_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>PEP_Sent_Date__c</fullName>
    <label>PEP Sent Date</label>
    <type>Date</type>
</CustomField>