knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Prescreen_Level_2_Completed__c.field-meta.xml
<CustomField>
    <fullName>Prescreen_Level_2_Completed__c</fullName>
    <label>Prescreen Level 2 Completed</label>
    <type>Date</type>
</CustomField>