knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Prescreen_Level_2_Requested__c.field-meta.xml
<CustomField>
    <fullName>Prescreen_Level_2_Requested__c</fullName>
    <label>Prescreen Level 2 Requested</label>
    <type>Date</type>
</CustomField>