knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Provider_Hours_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Provider_Hours_Last_3_Months__c</fullName>
    <label>Provider Hours Last 3 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>