knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Provider_Next_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Provider_Next_Scheduled_Date__c</fullName>
    <label>Provider Next Scheduled Date</label>
    <type>Date</type>
</CustomField>