knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Rate_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Active_Date__c</fullName>
    <label>Rate Active Date</label>
    <type>Date</type>
</CustomField>