knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Re_Contract__c.field-meta.xml
<CustomField>
    <fullName>Re_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re Contract</label>
    <type>Checkbox</type>
</CustomField>