knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Received_Current_Completed_References__c.field-meta.xml
<CustomField>
    <fullName>Received_Current_Completed_References__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Last Updated for this User story - PR1050558-4366</description>
    <label>Received Current Completed References</label>
    <type>Checkbox</type>
</CustomField>