knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Request_and_Release_Requested__c.field-meta.xml
<CustomField>
    <fullName>Request_and_Release_Requested__c</fullName>
    <label>Request and Release Requested</label>
    <type>Date</type>
</CustomField>