knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Temporary_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Inactive_Reason__c</fullName>
    <label>Temporary Inactive Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACLS expired</fullName>
            </value>
            <value>
                <fullName>Administrative Physician Only</fullName>
            </value>
            <value>
                <fullName>Agreement Expired</fullName>
            </value>
            <value>
                <fullName>Amendment Not Returned</fullName>
            </value>
            <value>
                <fullName>Annual Compliance Training Incomplete</fullName>
            </value>
            <value>
                <fullName>ATLS expired</fullName>
            </value>
            <value>
                <fullName>BCBS Enrollment Required</fullName>
            </value>
            <value>
                <fullName>Board Certification Expiration</fullName>
            </value>
            <value>
                <fullName>Collab Practice Agr Education not rec&apos;d</fullName>
            </value>
            <value>
                <fullName>Commercial Malpractice Insurance Expired</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest Questionnaire-Not on File</fullName>
            </value>
            <value>
                <fullName>Contracting document is outstanding</fullName>
            </value>
            <value>
                <fullName>CPA/Superv Signatures not rec’d</fullName>
            </value>
            <value>
                <fullName>DEA expired</fullName>
            </value>
            <value>
                <fullName>FPPE-Focused Professional Practice Eval</fullName>
            </value>
            <value>
                <fullName>Hospital Malpractice Insurance Expired</fullName>
            </value>
            <value>
                <fullName>Hospital Privileges Expired</fullName>
            </value>
            <value>
                <fullName>Hospital Privileges Suspended</fullName>
            </value>
            <value>
                <fullName>HR - Direct Deposit Form</fullName>
            </value>
            <value>
                <fullName>HR - Federal Tax Form</fullName>
            </value>
            <value>
                <fullName>HR - I9 forms and ID</fullName>
            </value>
            <value>
                <fullName>HR - IT protocol form</fullName>
            </value>
            <value>
                <fullName>HR- Voided Check</fullName>
            </value>
            <value>
                <fullName>Independent Contractor Agrmt not on file</fullName>
            </value>
            <value>
                <fullName>Lack of required CMEs</fullName>
            </value>
            <value>
                <fullName>Leased Employee Agreement not on file</fullName>
            </value>
            <value>
                <fullName>Locum Company Malpractice Insurance Expired</fullName>
            </value>
            <value>
                <fullName>Medicaid app not at insurance carrier</fullName>
            </value>
            <value>
                <fullName>Medicaid PIN# terminated</fullName>
            </value>
            <value>
                <fullName>Medical Director Agrmt not on file</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>