knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <label>Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
                <label>On-Call</label>
            </value>
            <value>
                <fullName>PRN</fullName>
            </value>
            <value>
                <fullName>Locum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>