knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/fields/Travel_Team__c.field-meta.xml
<CustomField>
    <fullName>Travel_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Team</label>
    <type>Checkbox</type>
</CustomField>