knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcarePractitionerFacility/validationRules/Facility_Title_should_not_be_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Facility_Title_should_not_be_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(ISNEW(),NOT(Facility_Title__r.Active__c)),

AND(ISCHANGED(Facility_Title__c),NOT(Facility_Title__r.Active__c))
)</errorConditionFormula>
    <errorDisplayField>Facility_Title__c</errorDisplayField>
    <errorMessage>Facility Title can not be inactive.</errorMessage>
</ValidationRule>